added navigation functionality for home screen to product screen

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,25 @@ body {
   border-radius: 30px 30px 0px 0px;
 }
 
+.product-screen {
+  position: relative;
+  .product-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  .product-img {
+    .img {
+      position: relative;
+      .product-wishlist {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+      }
+    }
+  }
+}
 
 .product-description {
   background: #fff;
