--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "poppins", sans-serif;
 }
 
+/* footer component  */
 .footer {
   position: fixed;
   bottom: 0;
@@ -15,6 +16,7 @@ body {
   border-radius: 30px 30px 0px 0px;
 }
 
+/* Product page  */
 .product-screen {
   position: relative;
   .product-header {
@@ -29,7 +31,7 @@ body {
       .product-wishlist {
         position: absolute;
         bottom: 20px;
-        right: 20px;
+        right: 15px;
       }
     }
   }
@@ -40,6 +42,7 @@ body {
   border-radius: 30px 30px 0px 0px;
 }
 
+/* feature component  */
 .feature {
   height: 160px;
   width: 100%;
@@ -55,5 +58,124 @@ body {
     align-items: flex-start;
     flex-direction: column;
     padding: 20px;
+  }
+}
+
+/* Payment Page  */
+.payment {
+  .payment-inner {
+    .pay {
+      background:#FDF3F9;
+      .card {
+        .input {
+          border: 1px solid #000;
+          border-radius: 8px;
+        }
+      }
+    }
+
+    .submit-btn {
+      .input {
+        background: #bf477f;
+        color:#fff;
+      }
+    }
+  }
+}
+
+/* model component  */
+.model {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background: #fff;
+  z-index: 1;
+
+  .main-inner {
+    min-width: 400px;
+    height: 220px;
+    background: #000;
+  }
+}
+
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 18px;
+  left: 37px;
+  width: 2px;
+  height: 10px;
+  border-radius: 20%;
+  background: #000;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
